# ros2_ws

./: .gitignore  LICENSE  ZED_Diagnostic_Results.json  get_context.py  ros2_workspace_context.md  zed2_settings.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rover_autonomy/lib/rover_autonomy/: brain_node  mock_rover
install/rover_autonomy/share/rover_autonomy/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rviz_plugin_zed_od/share/rviz_plugin_zed_od/: local_setup.sh  package.sh
install/zed_aruco_localization/share/zed_aruco_localization/: package.sh
install/zed_components/share/zed_components/: local_setup.sh  package.sh
install/zed_depth_to_laserscan/share/zed_depth_to_laserscan/: local_setup.sh  package.sh
install/zed_display_rviz2/share/zed_display_rviz2/: package.sh
install/zed_ipc/share/zed_ipc/: local_setup.sh  package.sh
install/zed_isaac_ros_april_tag/share/zed_isaac_ros_april_tag/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zed_isaac_ros_multi_camera/share/zed_isaac_ros_multi_camera/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zed_isaac_ros_nitros_sub/share/zed_isaac_ros_nitros_sub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zed_multi_camera/share/zed_multi_camera/: local_setup.sh  package.sh
install/zed_rgb_convert/lib/zed_rgb_convert/: zed_rgb_convert
install/zed_rgb_convert/share/zed_rgb_convert/: package.sh
install/zed_robot_integration/share/zed_robot_integration/: local_setup.sh  package.sh
install/zed_ros2/share/zed_ros2/: local_setup.sh  package.sh
install/zed_topic_benchmark/lib/zed_topic_benchmark/: zed_topic_benchmark
install/zed_topic_benchmark/share/zed_topic_benchmark/: package.sh
install/zed_topic_benchmark_component/share/zed_topic_benchmark_component/: package.sh
log/: latest_build
src/lunabot_bringup/: package.xml  setup.py
src/lunabot_bringup/config/: apriltag_config.yaml  ekf_params.yaml  ekf_params_sim.yaml  nav2_params.yaml  rtabmap_params.yaml
src/lunabot_bringup/launch/: autonomy.launch.py  mapping.launch.py
src/robot_urdf/: CMakeLists.txt  package.xml
src/robot_urdf/config/: ekf.yaml  ekf_sim.yaml  joint_names_Assem1.yaml  nav2_params.yaml  ros2_controllers.yaml  rtab_params.yaml
src/robot_urdf/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  robot_bringup.launch.py  sim_bringup.launch.py
src/robot_urdf/meshes/: ArmL.STL  ArmR.STL  DrumRevL.STL  DrumRevR.STL  Frame.STL  WheelFL.STL  WheelFR.STL  WheelRL.STL  WheelRR.STL
src/robot_urdf/scripts/: zed_noise_odom.py
src/robot_urdf/urdf/: Assem1.csv  Assem1.urdf  robot.urdf.xacro
src/robot_urdf/worlds/: landscape.dae  landscape9.dae  ucf.world  ucf_base.dae
src/rover_autonomy/: package.xml  setup.py
src/rover_autonomy/rover_autonomy/: brain_node.py  ir_sensor_publisher.py  pose_initializer.py  python_sender_node.py
src/rover_simulation/: CMakeLists.txt  package.xml
src/rover_simulation/src/: rover_simulation.cpp
src/test_code/: LXAZ_reader  ip_display.py  ir_sensor_publisher.py
(+33 files in other folders)
