<?xml version="1.0"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>0.0.0</version>
  <description>UB Lunabotics 2026 bringup package</description>
  <maintainer email="your@email.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rover_autonomy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
